--- a/compare_report_template.html
+++ b/compare_report_template.html
@@ -13,6 +13,10 @@
       font-family: National, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Open Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     }
 
+    .red {
+      color: var(--red) !important;
+    }
+
     /* stuff in the design system that is not in the design system */
     .table{
       border:none;
@@ -169,6 +173,11 @@
     .collapsible.closed .arrow {
       transform: rotate(0deg);
     }
+
+    .collapsible-small{
+      padding: 0;
+      margin: 0;
+    }
     /* ---------------- End collapsible sections ----------------- */
 
   </style>
@@ -193,19 +202,17 @@
 
       collapsibleHeaders.forEach(function(header) {
         header.addEventListener("click", function() {
-          this.parentElement.classList.toggle("closed");
+          const parent = this.parentElement;
+          parent.classList.toggle("closed");
+
           const showHide = this.querySelector("small");
-          if (showHide.innerHTML === " [show]") {
-            showHide.innerHTML = " [hide]";
-          } else {
-            showHide.innerHTML = " [show]";
+          console.log(showHide);
+          if (showHide !== null) {
+            showHide.textContent = parent.classList.contains("closed") ? " [show]" : " [hide]";
           }
+
           const content = this.nextElementSibling;
-          if (content.style.display === "none") {
-            content.style.display = "block";
-          } else {
-            content.style.display = "none";
-          }
+          content.style.display = parent.classList.contains("closed") ? "none" : "block";
         });
       });
     });
