--- a/compare_report_template.html
+++ b/compare_report_template.html
@@ -31,7 +31,7 @@
       /* display:block; */
       margin-bottom:15px;
       max-width:100%;
-      table-layout: fixed;
+      /* table-layout: fixed; */
       /* overflow-x:auto */
     }
     .table td,
@@ -60,6 +60,10 @@
     table.diff td,
     table.diff th {
       padding: 0.25em 0.5em 0.25em 0.5em;
+    }
+
+    .dataframe tr td:first-child {
+      font-size: 1rem;
     }
 
     .diff_header {
