Increase the size of the feedback modal

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="root"></div>
   <div id="progress_modal" class="modal" data-bs-backdrop="static" tabindex="-1">
 
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Feedback</h5>
