Change the way custom javascript is loaded
I think I heard PDS mension that they would prefer not to have
local servers running. So for the frozen/bundled app we should
not have a local server running. This means that we must load assets
using relative paths only. I have also chosen to include the custom
javascript in the react bundle. This meant having to manually expose
functions.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </div>
   </div>
   <script type="module" src="/src/main.tsx"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/ui.js"></script>
+  <script type="module" src="/src/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="/src/js/ui.js"></script>
 </body>
 
 </html>
