--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </div>
     </div>
   </div>
+  <!-- <script type="module" src="/src/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="/src/js/ui.js"></script> -->
   <script type="module" src="/src/main.tsx"></script>
-  <script type="module" src="/src/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="/src/js/ui.js"></script>
 </body>
 
 </html>
