--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
   </div>
   <!-- <script type="module" src="/src/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="/src/js/ui.js"></script> -->
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="/main.tsx"></script>
 </body>
 
 </html>
