Migrate from requests to httpx with async support and refactor logging
Major changes:
- Replace requests/urllib3 with httpx for HTTP client (async-ready)
- Add new bills_api.py module with async BillsApiClient and typed dataclasses
- Refactor check_web_amdts to use async API calls with progress bar
- Convert logging setup to lazy initialization via setup_lawchecker_logging()
- Fix os.getlogin() crash using getpass.getuser() fallback
- Add stacklevel to custom logger.notice() for correct source location

check_web_amdts improvements:
- Add async_progress_bar for concurrent API fetching
- Improve AmdtRef to handle empty num/dnum edge cases
- Better text normalization with clean_lm_xml_amdt and clean_json_html_amdt
- Enhanced whitespace handling for amendment text comparison

Other fixes:
- Add CSS for sticky diff table headers and h5 margin in reports
- Replace double quote formatting in HTML post-processing
- Call setup_lawchecker_logging() in CLI entry points
- Minor code formatting (single quotes, line wrapping)

--- a/API_html_diff.html
+++ b/API_html_diff.html
@@ -231,7 +231,7 @@
             <div class="block-page amendments-check" id="content-goes-here">
               <h1>Check Amendments on Bills.parliament.uk</h1>
 
-            <div class="wrap"><section id="intro"><h2>Introduction</h2><p>This report summarises differences between amendments in the bills API and the amendments in the LawMaker document XML official list documents. The document is:<br><strong>Pension Schemes Bill</strong></p></section><table class="sticky-head table-responsive-md table"><thead><tr><th scope="col"></th><th scope="col">Pension Schemes Bill</th></tr></thead><tbody><tr><td>Bill Title</td><td>Pension Schemes Bill</td></tr><tr><td>Published date</td><td>Thursday 11 September 2025</td></tr><tr><td>List Type</td><td>Amendment Paper</td></tr></tbody></table></div><div></div><div></div><section class="card">
+            <div class="wrap"><section id="intro"><h2>Introduction</h2><p>This report summarises differences between amendments in the bills API and the amendments a LawMaker official list XML document. The document is:<br><strong>Pension Schemes Bill</strong></p></section><table class="sticky-head table-responsive-md table"><thead><tr><th scope="col"></th><th scope="col">Pension Schemes Bill</th></tr></thead><tbody><tr><td>Bill Title</td><td>Pension Schemes Bill</td></tr><tr><td>Published date</td><td>Thursday 11 September 2025</td></tr><tr><td>List Type</td><td>Amendment Paper</td></tr></tbody></table></div><div></div><div></div><section class="card">
 <div class="card-inner collapsible">
   <div class="collapsible-header">
     <h2 data-heading-label="Missing amendments" id="card-1"><span class="arrow"> </span>Missing amendments<small class="text-muted"> [hide]</small></h2>
